src/test/deca/syntax/parser/valid/test/test_pars_val_decla_variable_sans_affectation.deca
// Description:
//    Programme minimaliste testant l'arbre d'affectation d'une variable.
//
// Resultats:
//    
//
// Historique:
//    cree le 01/01/2023


{
    int x;
}