src/test/deca/syntax/parser/invalid/test/test_pars_inv_instruction_primary_readfloat_oubli_parenthese.deca
// Description:
//    tests de programme incorrect syntaxiquement pour une primary
//
// Resultats:
//    Ligne 13 : Erreur (oubli ())
//    
//
// Historique:
//    cree le 04/01/2023

{
    readFloat;
}
